--- a/styles/style1.css
+++ b/styles/style1.css
@@ -61,9 +61,8 @@ main {
     margin-bottom: 50px;
 }
 
-/* Para hacer una pequeña sangría (párrafo de art. en el index) */
-.parrafoArticulo {
-    margin-left: 30px;
+.parrafoSangria {
+    text-indent: 30px;
 }
 
 main>p {
