--- a/styles/style2.css
+++ b/styles/style2.css
@@ -4,7 +4,7 @@
 }
 
 header {
-    background-image: url(../design1_image2.jpg);
+    background-image: url(/images/design1_image2.jpg);
     margin-top: 107px;
     padding: 180px 0;
     background-position: center -20px;
