--- a/styles/style3.css
+++ b/styles/style3.css
@@ -4,7 +4,7 @@
 }
 
 html {
-    background-image: url(/design1_image2.jpg);
+    background-image: url(/images/design1_image2.jpg);
     background-size: 350px;
     background-repeat: no-repeat;
     background-position: 40px 615px;
@@ -12,7 +12,7 @@ html {
 }
 
 body {
-    background-image: url(/design1_image1.jpg);
+    background-image: url(/images/design1_image1.jpg);
     background-size: 350px;
     background-repeat: no-repeat;
     background-position: 40px 340px;
