--- a/styles/style3.css
+++ b/styles/style3.css
@@ -74,9 +74,11 @@ main {
     flex-direction: column;
     justify-content: space-between;
 }
+
 .imagen1, .imagen2 {
     width: 350px;
     border-radius: 20px;
+    box-shadow: 5px 5px 20px;
 }
 
 .div-flex {
@@ -175,4 +177,9 @@ ol, ul {
 
 li {
     font-size: 20px;
+}
+
+.fijarImagenes {
+    position: sticky;
+    top: 150px;
 }
